@@ -112,8 +112,100 @@ other than Jail)</li>
 </ul>
 </p>
 <h2>Classes vs. namespaces</h2>
-<h2>Pre-defined types</h2>
+<p>There are some non-obvious differences between classes and namespaces that
+may need explaining. (OK, I admit, I just kicked in an open door). The table
+below gives the major differences between the two, in more or less random 
+order.</p>
+<table class="intext" width="100%">
+<caption>Differences between classes and namespaces in Jail</caption>
+<tbody>
+<tr class="title"><td width="50%">Class</td><td width="50%">Namespace</td></tr>
+<tr><td style="border-right: thin dashed grey">Constructable</td><td>Not constructable</td></tr>
+<tr><td style="border-right: thin dashed grey">Copyable</td><td>Not copyable</td></tr>
+<tr><td style="border-right: thin dashed grey">Not writable by default<br/>
+Meaning that by default, you can't add a function to a class after the class
+has been declared.</td><td>Writable by default<br/>
+Meaning that by default, you can add a function to a namespace after the 
+namespace has already been declared:<ul>
+<li>Not every function defined in a namespace must be previously declared in
+the namespace's declaration and</li>
+<li>the namespace's declaration is &quot;extensible&quot;</li>
+</ul></td></tr>
+<tr><td style="border-right: thin dashed grey">Can be executable<br/>
+Meaning that if the class has a <code>body</code> function, the class itself
+is executable as a function (in which case <code>body</code> is called</td><td>Cannot be executable<br/>
+Though namespaces are allowed to have functions called <code>body</code>, those
+functions will not have the same special treatment as equivalent <code>body</code>
+functions in classes - i.e. you can't call a namespace as a function.
+</td></tr>
+<!--
+<tr><td style="border-right: thin dashed grey"></td><td></td></tr>
+-->
+</tbody>
+</table>
+<p>Obviously, this means that classes and namespaces are very different. That
+is mainly because they are meant for very different purposes: classes define
+variable types whereas namespaces group them.</p>
+<h3>What's in a namespace?</h3>
+<p>Shakespear, possible history's least-known programmer, at least knew to ask 
+the right questions (though he may have phrased the question a bit differently):
+"What's in a namespace? Would a variable by any other name not be as, well, 
+variable?"</p>
+<p>Namespaces serve a very important purpose in programming: they limit the
+visibility of declarations within the namespace to the namespace itself and
+the namespaces within it. This basically means that the default (root) 
+namespace doesn't get clobbered with whatever you add to other namespaces. I.e.:
+<pre>
+<b>namespace</b> MyNamespace
+<b>begin</b>
+    <b>function</b> my_function()
+    <b>begin</b>
+        <i>[ do something nice ... ]</i>
+    <b>end</b>;
 
+    <b>function</b> one_function()
+    <b>begin</b>
+        my_function();
+    <b>end</b>;
+<b>end</b>;
+
+<b>function</b> my_function()
+<b>begin</b>
+    <i>[ do something different, but nice as well.. ]</i>
+<b>end</b>;
+
+<b>function</b> another_function()
+<b>begin</b>
+    my_function();
+<b>end</b>;
+</pre>
+In this example, the two functions <code>my_function</code> don't clash 
+because they are not in the same namespace. The function <code>one_function</code>
+calls the function <code>MyNamespace::my_function</code> whereas 
+<code>another_function</code> calls the function <code>my_function</code> in
+the root namespace.</p>
+<h2>Pre-defined types</h2>
+<p>There are some pre-defined types in Jail that are generally necessary to do
+just about anything. Those types are:</p>
+<table class="intext" width="100%">
+<caption>Jail pre-defined types</caption>
+<tbody>
+<tr class="title"><td>Type</td><td>Description</td></tr>
+<tr><td class="subject">Item</td><td></td></tr>
+<tr><td class="subject" colspan=2 align="center">Scalar types</td></tr>
+<tr><td class="subject">Scalar</td><td></td></tr>
+<tr><td class="subject">Number</td><td></td></tr>
+<tr><td class="subject">Integer</td><td></td></tr>
+<tr><td class="subject">String</td><td></td></tr>
+<tr><td class="subject" colspan=2 align="center">Container types</td></tr>
+<tr><td class="subject">Array</td><td></td></tr>
+
+
+<!--
+<tr><td class="subject"></td><td></td></tr>
+-->
+</tbody>
+</table>
 </div>
 </td>
 <td width="210" valign="top">
@@ -127,6 +219,6 @@ width="210" height="62" border="0" align="right" alt=
 </tbody>
 </table>
 <div style="text-align: right; font-size: smaller;"<a href="#top">back to top</a></div>
-<div align="right">This page was last updated: $Date: 2004/01/26 11:26:11 $</div>
+<div align="right">This page was last updated: $Date: 2004/01/27 09:46:48 $</div>
 </body>
 </html>
